--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "date-fns": "^2.30.0",
     "eslint-plugin-cypress": "^2.12.1",
     "firebase": "^9.23.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.3.1",
@@ -17,8 +18,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build:css": "postcss src/styles/tailwind.css -o src/styles/app.css",
+    "watch:css": "postcss src/styles/tailwind.css -o src/styles/app.css --watch",
+    "react-scripts:start": "sleep 5 && react-scripts start",
+    "start": "run-p watch:css react-scripts:start",
+    "build": "run-s build:css react-scripts:build",
     "test": "react-scripts test",
     "lint": "eslint src",
     "eject": "react-scripts eject"
@@ -59,6 +63,7 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.43.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -68,6 +73,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.7.1"
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.24",
+    "postcss-cli": "^10.1.0",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.3.2"
   }
 }
